# aiwebengine

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  APP_DEVELOPMENT.md  AUTH_TODO.md  CACHED_REGISTRATIONS_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile.local  Caddyfile.production  Caddyfile.staging  Cargo.toml  DATABASE_SCRIPTS_UPDATE.md  DEVELOPMENT.md  DOCKER_IMPLEMENTATION.md  DOCKER_PUBLISHING_STATUS.md  DOCKER_QUICK_REFERENCE.md  DOCUMENTATION_RESTRUCTURE.md  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.staging  EDITOR_API_FIX.md  EDITOR_README.md  EXAMPLE_SCRIPTS_INTEGRATION_COMPLETE.md  FIXES_APPLIED.md  MISSING_AUTH_COMPONENTS.md  Makefile  PHASE_0_0_SECURITY_RESTRUCTURE.md  PHASE_0_5_COMPLETE.md  PHASE_0_IMPLEMENTATION.md  PHASE_2_COMPLETE.md  PHASE_2_DOCUMENTATION_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_JAVASCRIPT_INTEGRATION_COMPLETE.md  PUBLIC_RELEASE_SETUP.md  QUICK_START_TEST_FIX.md  README.DATABASE.md  README.md  (+44 more)
.cargo/: config.toml
.claude/: settings.json
.config/: nextest.toml
.github/: ENABLING_DOCKER_PUBLISHING.md  PULL_REQUEST_TEMPLATE.md
.sqlx/: query-03d6c770dcf85c800639334f5b13629fee46c52c627987ae4d8b5b516a5254a0.json  query-1c50a4e8642c2fb46ee9e66fa0b1bfd4dcc9009675dcf6f2d22b488083399fd3.json
archive/: ASSET_REFACTORING_SUMMARY.md  BASE_URL_CONFIGURATION.md  CACHED_REGISTRATIONS_IMPLEMENTATION.md  DATABASE_API_REFACTOR.md  DATABASE_SCRIPTS_UPDATE.md  DOCKER_CONFIG_ALIGNMENT.md  DOCKER_IMPLEMENTATION.md  DOCUMENTATION_RESTRUCTURE.md  DOCUMENTATION_RESTRUCTURE_COMPLETE.md  DOCUMENTATION_RESTRUCTURE_STATUS.md  DOCUMENTATION_UPDATES_SECRETS.md  Dockerfile.staging.deprecated  FIXES_APPLIED.md  GRAPHQL_WEBSOCKET_IMPLEMENTATION.md  MCP_IMPLEMENTATION.md  PHASE_0_0_SECURITY_RESTRUCTURE.md  PHASE_0_IMPLEMENTATION.md  PHASE_2_DOCUMENTATION_COMPLETE.md  PHASE_3_COMPLETE.md  QUICK_START_TEST_FIX.md  README.md  REQUIREMENTS_GAP_ANALYSIS.md  REQUIREMENTS_UPDATE_v1.2.md  SCRIPT_INIT_IMPLEMENTATION_PLAN.md  SQLX_SETUP_COMPLETE.md  TEST_FAILURES_ANALYSIS.md  TEST_FIXES_ADDITIONAL.md  TEST_FIXES_APPLIED.md  TEST_OPTIMIZATION.md  THREE_TIER_GRAPHQL_SECURITY_IMPLEMENTATION.md  local-development.md  remote-development.md
assets/: aiwebengine-priv.d.ts  aiwebengine.d.ts  editor.css  editor.html  editor.js  engine.css
docs/: APP_DEVELOPMENT.md  AUTH_DEBUGGING_GUIDE.md  AUTH_ISADMIN_FIX.md  AUTH_JS_API.md  AUTH_REDIRECT_IMPLEMENTATION.md  BOOTSTRAP_ADMIN.md  CONFIGURATION.md  COOKIE_NAME_FIX.md  DATABASE_SCHEMA_API.md  DOCKER.md  DOCKER_SECRETS_SETUP.md  EDITOR_AUTH_FIX.md  EDITOR_AUTH_REQUIREMENT.md  EDITOR_README.md  INDEX.md  MANAGER_UI.md  MCP_CLIENT.md  MIDDLEWARE_ORDERING_FIX.md  OAUTH_INTEGRATION_FIX.md  README.md  SECRETS_ACCESS_CONTROL.md  TEST_FLAKINESS_ANALYSIS.md  TEST_MOCK_SERVER_IMPLEMENTATION.md  TRANSACTIONS.md  TRANSACTION_IMPLEMENTATION_SUMMARY.md  USER_REPOSITORY_IMPLEMENTATION.md  USER_REPOSITORY_INTEGRATION.md  examples.md  graphql-subscriptions.md  javascript-apis.md  local-development.md  remote-development.md  streaming.md
examples/: setup_constrained_secrets.sh
migrations/: 20241024000001_create_scripts.sql  20241024000002_create_assets.sql  20241024000003_create_logs.sql  20241024000004_create_route_registrations.sql  20241024000004_create_users.sql  20241024000005_create_sessions.sql  20241114000003_add_privileged_to_scripts.sql  20251027155422_add_provider_user_id_to_users.sql  20251028100000_alter_users_drop_email_unique.sql  20251030175548_create_script_storage.sql  20251106000000_add_log_level_to_logs.sql  20251111000000_remove_asset_public_path.sql  20251114215818_rename_script_storage_to_shared_storage.sql  20251118000000_remove_script_init_columns.sql  20251119000000_add_name_fields.sql  20251119000001_rename_asset_name_to_uri.sql  20251119000002_rename_code_to_content.sql  20251123000000_create_personal_storage.sql  20251129000000_create_script_owners.sql  20251207000000_create_security_tables.sql  20251213000000_create_script_tables.sql  20251231000000_add_script_uri_to_assets.sql  20260220000000_create_script_secrets.sql  20260220000001_create_user_secrets.sql  20260220000002_rename_storage_to_properties.sql  20260427000000_create_scheduler_jobs.sql  README.md
scripts/: README.md  check-dns.sh  core.js  db.sh  debug.js  example.js  fix_tests.sh  health_test.js  helloworld.js  js_log_test.js  js_log_test_uri.js  js_script_mgmt_test.js  method_test.js  query_test.js  setup-database.sh  test_database_schema.js  test_editor_api.js
src/: asset_registry.rs  bytecode.rs  config.rs  conversion.rs  database.rs  db_schema_utils.rs  dispatcher.rs  docs.rs  error.rs  graphql.rs  graphql_schema_gen.rs  graphql_ws.rs  http_client.rs  js_engine.rs  js_engine_safe.rs  lib.rs  main.rs  mcp.rs  mcp_client.rs  middleware.rs  module_loader.rs  (+13 more)
(+258 files in other folders)
