[package]
name = "aiwebengine"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
rquickjs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
axum-server = "0.7"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
serde_urlencoded = "0.7.1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "7.0", features = ["graphiql", "dynamic-schema"] }
async-graphql-axum = "7.0"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
notify = "8.2"
