[package]
name = "aiwebengine"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
rquickjs = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
axum-server = "0.7"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
serde_urlencoded = "0.7.1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "7.0", features = ["graphiql", "dynamic-schema"] }
async-graphql-axum = "7.0"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }
notify = "8.2"
config = "0.15"
toml = "0.9"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
regex = "1.5"
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3.31"
async-stream = "0.3.6"

# Optimize test builds for faster compilation and execution
[profile.test]
opt-level = 1          # Basic optimizations for tests
debug = 1              # Reduced debug info
codegen-units = 4      # Faster parallel compilation
incremental = true     # Enable incremental compilation

# Even faster for CI/release testing
[profile.test-opt]
inherits = "test"
opt-level = 2
lto = "thin"

# Test-only dependencies
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
