[package]
name = "aiwebengine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["cors"] }
rquickjs = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
axum-server = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde_urlencoded = "0.7.1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
async-graphql = { version = "7.0", features = ["dynamic-schema"] }
async-graphql-axum = "7.0"
lazy_static = "1.4"
utoipa = { version = "5.0", features = ["chrono"] }
clap = { version = "4.0", features = ["derive"] }
notify = "8.2"
toml = "0.9"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }
regex = "1.5"
indexmap = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
url = "2.5"
futures = "0.3.31"
async-stream = "0.3.6"
mime = "0.3"
mime_guess = "2.0"
html-escape = "0.2"
sha2 = "0.10"
rand = "0.9.2"
pulldown-cmark = "0.13.0"
handlebars = "6.0"

# TypeScript/JSX transpilation
oxc = { version = "0.107.0", features = ["full"] }

# Security and encryption (Phase 0.5)
aes-gcm = "0.10"
argon2 = "0.5"
subtle = "2.5"

# OAuth2 and JWT (Phase 2)
oauth2 = "5.0.0"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
openidconnect = "4.0.1"
async-trait = "0.1"
urlencoding = "2.1.3"
multer = "3.0"

# Database (SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }

# Optimize test builds for faster compilation and execution
[profile.test]
opt-level = 1          # Basic optimizations for tests
debug = 1              # Reduced debug info
codegen-units = 4      # Faster parallel compilation
incremental = true     # Enable incremental compilation

# Even faster for CI/release testing
[profile.test-opt]
inherits = "test"
opt-level = 2
lto = "thin"

# Test-only dependencies
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14.0"
jsonschema = "0.38.1"

# Build-time dependencies (for capturing build metadata)
[build-dependencies]
vergen = { version = "9.0", features = ["git", "gitcl"] }
